--- a/intro_css.html
+++ b/intro_css.html
@@ -1,49 +1,68 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Praticando CSS</title>
     <style>
-        body{
+        html{
+            height: 100%;
+        }        
+        body {
+            height: 100%;
+            display: flex;
+            flex-direction: column;
             font-family: Arial, Helvetica, sans-serif;
-            background: linear-gradient(-120deg,#d8dfee,#fff);
+            background: linear-gradient(-120deg, #d8dfee, #fff);
             margin: 0;
         }
-        #cabecalho{
+
+        #cabecalho {
             background-color: black;
             color: white;
             padding: 20px;
             text-align: center;
         }
-        .container{
+
+        .container {
             display: flex;
             flex-direction: row;
             gap: 20px;
-            justify-content:center ;
+            justify-content: center;
+            flex: 1;
         }
-        .card{
+
+        .card {
             background-color: rgb(133, 175, 175);
-            max-width: 450px;
+            width: 400px;
             height: 125px;
             padding: 20px;
+            font-size: x-large;
             text-align: center;
             border-radius: 10px;
             box-shadow: 0 2px 9px black;
-            margin: 32px;
+            margin: 80px 32px 32px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
         }
-        span{
+
+        span {
             color: #f5f7fa;
             font-size: x-large;
         }
-        footer{
+
+        footer {
             background-color: black;
             padding: 10px;
-            color: white;
+            color: rgba(255, 255, 255, 0.267);
             text-align: center;
         }
     </style>
 </head>
+
 <body>
     <div id="cabecalho">
         <h1>PRATICANDO CSS</h1>
@@ -64,4 +83,5 @@
         &copy; 2025 - Todos os direitos reservados.
     </footer>
 </body>
+
 </html>
