--- a/intro_css.html
+++ b/intro_css.html
@@ -80,8 +80,9 @@
     </div>
 
     <footer id="rodape">
-        &copy; 2025 - Todos os direitos reservados.
+        <p>&copy; 2025 - Todos os direitos reservados.</p>
     </footer>
 </body>
 
 </html>
+
